# sapere

./: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt  start_sapere.bat
learning/: dia1.py  dia2.py  dia3.py  dia4.py  dia5.py
sapere/: __init__.py  config.py
sapere/data/: sapere.db
sapere/domain/: enums.py  models.py
sapere/extractor/: syllabus.py
sapere/infrastructure/: database.py
sapere/llm/: base.py  gemini.py  prompts.py
sapere/study/: exercises.py  feynman.py  flashcard.py  offline.py  planner.py  scheduler.py  session.py  timer.py
sapere/ui/: mobile.py  study.py  theme.py  upload.py
sapere/utils/: json_parser.py
tests/: test_database.py  test_models.py  test_scheduler.py
