[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sapere"
version = "0.1.0"
description = "Asistente de estudio con IA basado en neurociencia y psicologia cognitiva"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.42",
    "google-genai>=1.24",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pypdf>=5.0",
    "structlog>=24.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.11",
    "mypy>=1.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--tb=short"]
